fixed ordering on mobile for details page, added height back to carousel div

--- a/Content/style.css
+++ b/Content/style.css
@@ -408,7 +408,7 @@ footer {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-/*  height: 200px; */
+  height: 200px; 
   }
 
 .carousel-indicators {
@@ -1797,7 +1797,7 @@ nav > .menu-link > ul > li > a {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-/*  height: 400px; */
+  height: 400px; 
   }
 
 /* position overlay text from bottom */
